--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header__img {
   width: 100%;
 }
-.header .header__link {
+.header__link {
   font-family: fantasy, cursive;
 }
 
@@ -35,17 +35,17 @@ body {
 .app__input-container {
   display: flex;
 }
-ul {
+#completed-tasks, #incomplete-tasks {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.app__item, .app__list-title {
   list-style:none;
 }
-input,button{
+.input,.app__btn{
   outline:none;
 }
-button {
+.app__btn {
   background: none;
   border: 0px;
   color: #888;
@@ -54,12 +54,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.app__btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.app__list-title,
+.app__add-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -68,7 +68,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.app__edit-input, .app__add-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -80,21 +80,22 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.app__edit-input:focus, 
+.app__add-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.app__add-label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.app__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;  
@@ -102,47 +103,50 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.app__item > .app__check-input,
+.app__item > .app__task-label,
+.app__item > .app__edit-input,
+.app__item > .app__btn {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.app__item > .app__check-input {
   margin: 0 10px;
 }
-li > label {
+.app__item > .app__task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.app__item >    .app__edit-input {
   width: 226px
 }
-button.app__delete-btn img {
+.app__delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.app__delete-btn img:hover {
+.app__delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .app__task-label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.app__edit-input {
   display:none
 }
 
-ul li.edit-mode input[type="text"] {
+.edit-mode .app__edit-input {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.edit-mode .app__task-label {
   display:none;
 }
